# chess

./: .gitignore  CMakeLists.txt  chessSystem.c  games.c  games.h  makefile  tournaments.c  tournaments.h  util.c  util.h
tests/: chessSystemTestsExample.c
